/*
 * The MIT License
 * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
 * Copyright (c) 2018 Estonian Information System Authority (RIA),
 * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
 * Copyright (c) 2015-2017 Estonian Information System Authority (RIA), Population Register Centre (VRK)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
syntax = "proto3";

package org.niis.xroad.proxy.proto;

import "common_messages.proto";

option java_multiple_files = true;

service AdminService {
  rpc GetAddOnStatus(Empty) returns (AddOnStatusResp) {}
  rpc GetMessageLogEncryptionStatus(Empty) returns (MessageLogEncryptionStatusResp) {}
  rpc GetTimestampStatus(Empty) returns (TimestampStatusResp) {}
  rpc GetProxyMemoryStatus(Empty) returns (ProxyMemoryStatusResp) {}
  rpc ClearConfCache(Empty) returns (Empty) {}
  rpc TriggerDSAssetUpdate(Empty) returns (Empty) {}
  rpc GetTimestampingPrioritizationStrategy(Empty) returns (TimestampingPrioritizationStrategyResp) {}
  rpc GetOcspPrioritizationStrategy(Empty) returns (OcspPrioritizationStrategyResp) {}
}

message AddOnStatusResp {
  bool message_log_enabled = 1;
  bool op_monitoring_enabled = 2;
}

message MessageLogEncryptionStatusResp {
  bool message_log_archive_encryption_status = 1;
  bool message_log_database_encryption_status = 2;
  string message_log_grouping_rule = 3;
  repeated MessageLogArchiveEncryptionMember members = 4;
}

message MessageLogArchiveEncryptionMember {
  string member_id = 1;
  repeated string keys = 2;
  bool default_key_used = 3;
}

message TimestampStatusResp {
  map<string, DiagnosticsStatus> diagnostics_status = 1;
}

message ProxyMemoryStatusResp {
  int64 totalMemory = 1;
  int64 freeMemory = 2;
  int64 maxMemory = 3;
  int64 usedMemory = 4;
  int64 usedPercent = 5;
  optional int64 threshold = 6;
}

message TimestampingPrioritizationStrategyResp {
  ServicePrioritizationStrategy strategy = 1;
}

message OcspPrioritizationStrategyResp {
  ServicePrioritizationStrategy strategy = 1;
}

enum ServicePrioritizationStrategy {
  SERVICE_PRIORITIZATION_STRATEGY_NONE = 0;
  ONLY_FREE = 1;
  ONLY_PAID = 2;
  FREE_FIRST = 3;
  PAID_FIRST = 4;
}
